--- a/yes.html
+++ b/yes.html
@@ -7,11 +7,12 @@
     <body>
         <div class="container">
             <div >
-                <h1 class = "header_text">BULAGA</h1>
-                <h1 class = "header_text">WHAHAHHAHAHA</h1>
+                <h1 class = "header_text">Please wait...3 to 5 Business Days</h1>
+                <!-- <h1 class = "header_text">WHAHAHHAHAHA</h1> -->
             </div>
             <div class="gif_container">
-                <img src="https://media0.giphy.com/media/T86i6yDyOYz7J6dPhf/giphy.gif" alt="Cute animated illustration">
+                <!-- <img src="https://media0.giphy.com/media/T86i6yDyOYz7J6dPhf/giphy.gif" alt="Cute animated illustration"> -->
+                 <img src="https://media4.giphy.com/media/v1.Y2lkPTZjMDliOTUyMGl3eWx4MHBxY2o4NXF5endocHJzcDNxcHBibjF5Mno2OGI2cm5kNCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/9mKFTIlyqLG8ltuU8N/giphy.gif">
             </div>
         </div>
        
